# Assembler-on-Imaginary-Language

./: .gitignore  CMakeLists.txt  assembler.c  assembler.h  assembler_algorithm.c  assembler_algorithm.h  assembler_handle.c  assembler_handle.h  general_help_methods.c  general_help_methods.h  help_methods.c  help_methods.h  main.c
FileHandling/: README.txt  fileHelpMethods.c  fileHelpMethods.h  readFromFile.c  readFromFile.h  writeToFile.c  writeToFile.h
Input-output_TestingFiles/Test1/: Test1.am  Test1.ent  Test1.ext  terminal_output.txt
Input-output_TestingFiles/Test2/: Test2.am  Test2.as  Test2.ent  Test2.ext  terminal_output.txt
Input-output_TestingFiles/Test3/: Test3.ent  terminal_output.txt
Input-output_TestingFiles/TestingOnTheGo/: TestingOnTheGo.am  TestingOnTheGo.as
Input-output_TestingFiles/img_system_error_test/: img_system_error_test.am  img_system_error_test.as  img_system_error_test.ob  terminal_output.txt
Input-output_TestingFiles/logical_error_test/: logical_error_test.am  logical_error_test.as  logical_error_test_output.txt  terminal_output.txt
Input-output_TestingFiles/pre_processor_error_test/: pre_processor_error_test.am  pre_processor_error_test.as  terminal_output.txt
Input-output_TestingFiles/second_trans_error_test/: second_trans_error_test.am  second_trans_error_test.as  terminal_output.txt
Input-output_TestingFiles/syntax_error_test/: syntax_error_test.am  syntax_error_test.as  syntax_error_test_output.txt  terminal_output.txt
Input-output_TestingFiles/uni_test/: terminal_output.txt  uni_test.am
LinkedList/: LinkedList.c  LinkedList.h
NameTable/: NameTable.c  NameTable.h  README.txt
assembler_ast/: assembler_ast.c  assembler_ast.h
diagnoses/: assembler_diagnoses.c  assembler_diagnoses.h  assembler_lang_related_diagnoses.c  assembler_lang_related_diagnoses.h  assembler_line_diagnoses.c  assembler_line_diagnoses.h  diagnose_help_methods.c  diagnose_help_methods.h  diagnose_line.c  diagnose_line.h  diagnose_util.c  diagnose_util.h
encoding/: MemoryImage.h  assembler_ast.c  assembler_ast.h  encode-line.c  encode-line.h  encoding-help-methods.c  encoding-help-methods.h  encoding.c  encoding.h  encodingUtil.c  encodingUtil.h  wordHandling.c  wordHandling.h
encoding/encoding-finals/: addressing-methods.h  addressing_methods.h  encoding-finals.h  encoding-type.h  encoding_finals.h  encoding_types.h  guidance.h  label_types.h  opcodes.h  ranges.h  registers.h  sentenceType.h  sentence_types.h
encoding/encodingDataStructures/: MemoryImage.h  word.h
errors/: assembler_errors.c  assembler_errors.h  error_check.c  error_check.h  error_handle.c  error_handle.h  errors.c  errors.h  system_errors.c  system_errors.h  warnings.c  warnings.h
errors/FirstTransitionErrors/: FirstTransitionErrors.c  FirstTransitionErrors.h  FirstTransitionLogicalAndImgSystemErrors.c  FirstTransitionLogicalAndImgSystemErrors.h  FirstTransitionSpecificErrorCheck.c  FirstTransitionSpecificErrorCheck.h  FirstTransitionSyntaxErrorCheckUtil.c  FirstTransitionSyntaxErrorCheckUtil.h  FirstTransitionSyntaxErrors.c  FirstTransitionSyntaxErrors.h
errors/PreProcessorErrors/: PreProcessorErrors.c  PreProcessorErrors.h  PreProcessorErrors_help_methods.c  PreProcessorErrors_help_methods.h
errors/SecondTransitionErrors/: SecondTransitionErrors.c  SecondTransitionErrors.h
errors/error_types/: ImgSystemError.h  LogicalError.h  SyntaxError.h  SystemError.h  error_constant.h  error_types.h
fileHandling/: fileErrors.c  fileErrors.h  fileHelpMethods.c  fileHelpMethods.h  readFromFile.c  readFromFile.h  writeToFile.c  writeToFile.h
general-enums/: assemblerFinals.h  indexes.h  neededFinals.h  neededKeys.h  programEnums.h  programFinals.h
new-data-types/: Error.h  boolean.h  param_num.h  process_result.h  word_number.h
transitions/: TransitionNumber.h  diagnose_input.c  first-transition.c  first-transition.h  first_transition_uitl.c  first_transition_uitl.h  first_transition_util.c  first_transition_util.h  pre-processor.c  pre-processor.h  second-transition.c  second-transition.h  second_transition.c  second_transition.h
util/: memoryUtil.c  memoryUtil.h  numberUtil.c  numberUtil.h  stringsUtil.c  stringsUtil.h
